--- a/index.html
+++ b/index.html
@@ -26,10 +26,12 @@
             <!-- Rotating Germ Shapes -->
             <div x-show="!move" class="z-0 grid grid-cols-4 pl-20 absolute inset-0 flex justify-center items-center">
                 <div class="">
-                    <div class="germ-shape big-shape z-20">
+                    <div class="germ-shape z-20">
                         <img src="img/ufo.svg"  class="size-10">
                     </div>
-                    <div class="germ-shape small-shape z-10"></div>
+                    <div class="to-left z-10">
+
+                    </div>
                 </div>
             </div>
         </div>
