--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         <title>JDR Portfolio</title>
     </head>
     <body class="z-10 font-arial" 
-        x-data="{ move: false, drop:false, drop2:false, drop3: false, project: false, contact: true, gallery:false, isModalOpen: false, project1: false, project2:false }">
+        x-data="{ move: false, drop:false, drop2:false, drop3: false, project: false, contact: false, gallery:false, isModalOpen: false, project1: false, project2:false }">
         <div class="bg-neutral-900 w-full h-full flex justify-center items-center relative"> 
             <button 
                 :class="move ? ' transition-transform duration-1000 transform translate-y-[-300px] translate-x-[690px]' 
@@ -158,8 +158,8 @@
                     </button>
                 </div>
                 <div x-show="!project && !contact && !gallery" class=" overflow-y-auto grid grid-cols-2">
-                    <div id="knowledgeLevelsChart" class="bg-white shadow-md rounded-lg m-2 col-span-2"></div>
-                    <div id="skillProficiencyChart" class="bg-white shadow-md rounded-lg m-2"></div>
+                    <div id="knowledgeLevelsChart" class=" shadow-md rounded-lg m-2 col-span-2"></div>
+                    <div id="skillProficiencyChart" class="shadow-md rounded-lg m-2"></div>
                     <div id="experienceDistributionChart" class="bg-white shadow-md rounded-lg m-2"></div>
                 </div>
                 <div x-show="project" class=" rounded-lg my-2 pb-5">
@@ -280,38 +280,71 @@
         <script>
             var options1 = {
                 chart: {
-                    type: 'radialBar',
-                    height: '250'
+                    type: 'radar',
+                    height: '300',
+                    toolbar: {
+                        show: false
+                    }
                 },
-                series: [85, 80, 75, 70, 60, 50, 45, 30],
-                labels: ['Laravel', 'Database Management', 'Back-End Development', 'Python', 'Java', 'Tailwind CSS', 'Alpine.js', 'C/C++'],
+                series: [{
+                    name: 'Skill Level',
+                    data: [85, 80, 75, 70, 60, 50, 45, 30]
+                }],
                 plotOptions: {
-                    radialBar: {
-                        dataLabels: {
-                            name: {
-                                fontSize: '16px',
-                            },
-                            value: {
-                                fontSize: '14px',
-                            },
-                            total: {
-                                show: true,
-                                label: 'Total',
-                                formatter: function (w) {
-                                    return '100%';
-                                }
+                    radar: {
+                        polygons: {
+                            strokeColor: '#e9e9e9',
+                            fill: {
+                                colors: ['#f3f3f3', '#fff']
                             }
                         }
                     }
                 },
-                colors: ['#FF5733', '#33C3FF', '#33FF57', '#FFC300', '#C70039', '#900C3F', '#DAF7A6', '#581845'],
+                yaxis: {
+                    show: false,
+                },
+                xaxis: {
+                    labels: {
+                        show: false
+                    }
+                },
+                fill: {
+                    opacity: 0.3
+                },
+                stroke: {
+                    show: true,
+                    width: 2,
+                    colors: ['#FFEB0C']
+                },
+                markers: {
+                    size: 4,
+                    colors: ['#FFEB0C'],
+                    strokeColor: '#FFEB0C',
+                    strokeWidth: 2
+                },
+                colors: ['#FFF695'],
                 title: {
                     text: 'Skill Proficiency',
                     align: 'center',
+                    style: {
+                        color: '#ffeb0c',
+                      }
+                },
+                tooltip: {
+                    enabled: true,
+                    custom: function({ series, seriesIndex, dataPointIndex, w }) {
+                        const labels = ['Laravel', 'Database Management', 'Back-End Development', 'Python', 'Java', 'Tailwind CSS', 'Alpine.js', 'C/C++'];
+                        const skillLevel = series[seriesIndex][dataPointIndex];
+                        const skillName = labels[dataPointIndex];
+                        return `<div style="padding: 5px; color: #fff; background: #333; border-radius: 5px;">
+                                    <strong>${skillName}</strong>: ${skillLevel}%
+                                </div>`;
+                    }
                 }
             };
+            
             var chart1 = new ApexCharts(document.querySelector("#skillProficiencyChart"), options1);
-            chart1.render();
+            chart1.render();                               
     
             var options2 = {
                 chart: {
@@ -331,14 +364,26 @@
                         show: false
                     }
                 },
-                colors: ['#1f77b4', '#ff7f0e', '#2ca02c', '#d62728', '#9467bd'], // Different color for each bar
+                colors: ['#ffeb0c', '#ffd700', '#fffacd', '#f0e68c', '#ffe135'],
+                plotOptions: {
+                    bar: {
+                      distributed: true,
+                      endingShape: 'rounded'
+                    }
+                  },
                 title: {
                     text: 'Practical Knowledge Levels',
                     align: 'center',
+                    style: {
+                        color: '#ffeb0c',
+                      }
                 },
                 legend: {
                     show: true,
-                    position: 'top'
+                    position: 'top',
+                    labels: {
+                        colors: '#ffeb0c', 
+                      },
                 },
                 tooltip: {
                     y: {
@@ -363,7 +408,10 @@
                 title: {
                     text: 'Experience Distribution',
                     align: 'center',
-                }
+                },
+                legend: {
+                    position: 'bottom'
+                  }
             };
             var chart3 = new ApexCharts(document.querySelector("#experienceDistributionChart"), options3);
             chart3.render();
