--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
                 @click="open = !open" 
                 @mouseenter="hover = true" 
                 @mouseleave="hover = false"
-                class="absolute z-50 text-white rounded-full border-solid border-4 border-[#ffeb0c] transition-all duration-500"
+                class="absolute z-50 text-white rounded-full border-solid bg-gradient-to-t from-indigo-500  border-4 border-[#ffeb0c] transition-all duration-500"
                 :style="{
                     top: open ? '0.5%' : '50%',  
                     left: '50%',
@@ -40,9 +40,11 @@
                     }"
                 >
             </button>
-            <div class="p-10 grid grid-cols-10">
-                <div class="pillow-shape bg-white animate-spin bg-opacity-10"></div>
-            </div>           
+            <div x-show="!open" class="text-white font-black text-7xl w-1/3 py-5 pl-10 font-square tracking-wide">
+                <span class="bg-clip-text text-transparent bg-gradient-to-r from-[#ffeb0c] to-indigo-500">
+                    "Building seamless digital experiences with a focus on functionality and design."
+                </span>
+            </div>          
         </div>
       
         <div x-show="open" x-transition class="grid grid-cols-2 z-40 fixed inset-0 transition-opacity duration-500 overflow-y-auto">
