--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
                 <a href="https://www.linkedin.com" class="text-blue-400 hover:underline mr-4"><img src="img/linkedin-icon.svg" class="size-6"></a>
                 <a href="tel:+63 950-473-8498" class="text-[#fff695] hover:underline"><img src="img/phone-icon.svg" class="size-6"></a>
             </div>
-            <div id="water"></div>           
+            <div x-show="!open" id="cursor"></div>          
         </div>
       
         <div x-show="open" x-transition class="grid grid-cols-2 z-40 fixed inset-0 transition-opacity duration-500 overflow-y-auto">
