--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         <script src="https://cdn.jsdelivr.net/npm/apexcharts"></script>
         <title>JDR Portfolio</title>
     </head>
-    <body class="font-lora" style="background-image: url('img/space.jpg');"
+    <body class="font-lora" style="background-color: #151f28;"
       x-data="{ open: false, drop:false, drop2:false, drop3: false, project: false, contact: false, gallery:false, isModalOpen: false, project1: false, project2:false }">
         <div>
             <button 
