--- a/index.html
+++ b/index.html
@@ -38,21 +38,26 @@
     <!-- Section 2 -->
     <div id="next-section" class="h-screen bg-white">
         <div class="p-5">
-            <div class="bg-[#FFCC00] border-2 border-black shadow-xl pl-2">
-                <h1 class="text-8xl font-bold font-doergon">JHENRICH D. ROQUIOS</h1>
+            <div class="border-2 border-black bg-black pl-1 pb-1">
+                <div class="bg-[#FFCC00] pl-2">
+                    <h1 class="text-8xl font-bold font-doergon">JHENRICH D. ROQUIOS</h1>
+                </div>
             </div>
             
-            <div class="flex justify-between">
-                <div>
+            <div class="grid grid-cols-4">
+                <div class="col-span-3">
                     <p class="text-3xl font-bold py-5">BS Computer Science Graduate</p>
                     <p class="text-3xl font-bold">IT Programmer at Betafoam Corporation</p>
+                    <p>
+                        A graduate with a Bachelor's Degree in Computer Science, has a strong passion for the field of development. Currently working as a web developer, with extensive experience in collaborative development and version control. Eager to learn new technologies and continuously adapting to updates in technologies and AI, aiming to expand my knowledge in development and contribute significantly to innovative projects.
+                    </p>
                 </div>
                 <div class="bg-black m-2 border-2 border-black">
                     <div class="bg-[#FFCC00] p-4 ml-2 mb-2">
                         <img src="img/toga.png" alt="Toga" class="max-w-full max-h-80">
                     </div>
-                </div>
-            </div>            
+                </div>              
+            </div>           
         </div>
     </div>
 </body>
