--- a/index.html
+++ b/index.html
@@ -49,8 +49,8 @@
                     <p class="text-3xl font-bold py-5">BS Computer Science Graduate</p>
                     <p class="text-3xl font-bold">IT Programmer at Betafoam Corporation</p>
                     <p class="text-2xl pt-5">
-                        <span>A</span> graduate with a Bachelor's Degree in Computer Science, has a strong passion for the field of development. Currently working as a web developer, with extensive experience in collaborative development and version control. Eager to learn new technologies and continuously adapting to updates in technologies and AI, aiming to expand my knowledge in development and contribute significantly to innovative projects.
-                    </p>
+                        <span class="ml-20">A</span> graduate with a Bachelor's Degree in Computer Science, has a strong passion for the field of development. Currently working as a web developer, with extensive experience in collaborative development and version control. Eager to learn new technologies and continuously adapting to updates in technologies and AI, aiming to expand my knowledge in development and contribute significantly to innovative projects.
+                    </p>                    
                 </div>
                 <div class="bg-black m-2 border-2 border-black">
                     <div class="bg-[#FFCC00] p-4 ml-2 mb-2">
