--- a/index.html
+++ b/index.html
@@ -57,7 +57,8 @@
                         <img src="img/toga.png" alt="Toga" class="max-w-full max-h-80">
                     </div>
                 </div>              
-            </div>           
+            </div> 
+            <div></div>          
         </div>
     </div>
 </body>
