--- a/index.html
+++ b/index.html
@@ -49,16 +49,53 @@
                     <p class="text-3xl font-bold py-5">BS Computer Science Graduate</p>
                     <p class="text-3xl font-bold">IT Programmer at Betafoam Corporation</p>
                     <p class="text-2xl pt-5">
-                        <span class="ml-20">A</span> graduate with a Bachelor's Degree in Computer Science, has a strong passion for the field of development. Currently working as a web developer, with extensive experience in collaborative development and version control. Eager to learn new technologies and continuously adapting to updates in technologies and AI, aiming to expand my knowledge in development and contribute significantly to innovative projects.
+                        <span class="ml-20 font-academy text-6xl">A</span> graduate with a <span class="font-bold">Bachelor's Degree in Computer Science</span>, has a strong passion for the field of development. Currently working as an <span class="font-bold">IT Programmer</span>, with extensive experience in collaborative development and version control. Eager to learn new technologies and continuously adapting to updates in technologies and AI, aiming to expand my knowledge in development and contribute significantly to innovative projects.
                     </p>                    
                 </div>
                 <div class="bg-black m-2 border-2 border-black">
-                    <div class="bg-[#FFCC00] p-4 ml-2 mb-2">
+                    <div class="bg-[#FFCC00] px-6 py-3 ml-2 mb-2">
                         <img src="img/toga.png" alt="Toga" class="max-w-full max-h-80">
                     </div>
-                </div>              
-            </div> 
-            <div></div>          
+                </div>  
+                <div class="col-span-4">
+                    <div class="flex justify-center mr-6">
+                        <p class="text-3xl font-bold font-doergon hover:font-academy hover:text-[#FFCC00] hover:text-4xl hover:tracking-widest">
+                            Socials and Contact
+                        </p>   
+                    </div> 
+                </div>
+                <div>
+                    <div class="mx-5 inline-flex gap-5">
+                        <img src="img/facebook-icon.svg" alt="" class="size-6">
+                        <p class="font-bold">facebook.com</p>
+                    </div>
+                    <div class="mx-5 inline-flex gap-5">
+                        <img src="img/instagram-icon.svg" alt="" class="size-6">
+                        <p class="font-bold">instagram.com</p>
+                    </div>
+                </div>
+                <div>
+                    <div class="mx-5 inline-flex gap-5">
+                        <img src="img/github-icon.svg" alt="" class="size-6">
+                        <p class="font-bold">https://github.com/Bartzabell</p>
+                    </div>
+                    <div class="mx-5 inline-flex gap-5">
+                        <img src="img/linkedin-icon.svg" alt="" class="size-6">
+                        <p class="font-bold">linkedIn.com</p>
+                    </div>
+                </div>
+                <div>
+                    <div class="mx-5 inline-flex gap-5">
+                        <img src="img/gmail-icon.svg" alt="" class="size-6">
+                        <p class="font-bold">jhenrichroquios000@gmail.com</p>
+                    </div>
+                    <div class="mx-5 inline-flex gap-5">
+                        <img src="img/phone-icon.svg" alt="" class="size-6">
+                        <p class="font-bold">+63-950-473-8498</p>
+                    </div>
+                </div>
+                
+            </div>       
         </div>
     </div>
 </body>
