--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <script src="https://cdn.tailwindcss.com"></script>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="styles.css">
-    <link rel="stylesheet" href="button-style.css">
+    <!-- <link rel="stylesheet" href="button-style.css"> -->
     <script src="tailwind-config.js"></script>
     <link rel="icon" href="img/face-button.png" type="image/png">
     <script src="https://cdn.jsdelivr.net/npm/apexcharts"></script>
