--- a/index.html
+++ b/index.html
@@ -52,9 +52,9 @@
                         <span class="ml-20 font-academy text-6xl">A</span> graduate with a <span class="font-bold">Bachelor's Degree in Computer Science</span>, has a strong passion for the field of development. Currently working as an <span class="font-bold">IT Programmer</span>, with extensive experience in collaborative development and version control. Eager to learn new technologies and continuously adapting to updates in technologies and AI, aiming to expand my knowledge in development and contribute significantly to innovative projects.
                     </p>                    
                 </div>
-                <div class="bg-black m-2 border-2 border-black">
+                <div class="bg-black m-2 border-2 border-black max-h-96">
                     <div class="bg-[#FFCC00] px-6 py-3 ml-2 mb-2">
-                        <img src="img/toga.png" alt="Toga" class="max-w-full max-h-80">
+                        <img src="img/toga.png" alt="Toga" class="max-w-full max-h-72">
                     </div>
                 </div>  
                 <div class="col-span-4">
@@ -94,9 +94,47 @@
                         <p class="font-bold">+63-950-473-8498</p>
                     </div>
                 </div>
-                
-            </div>       
+                <div class="flex justify-center gap-5 font-doergon text-sm">
+                    <button class="border rounded-lg bg-[#FFCC00] hover:bg-[#FFAA1D] hover:p-2 hover:outline">
+                        <a href="Jhenrich De Vera Roquios - cv.pdf" download class="p-2">
+                            CV Download
+                        </a>
+                    </button>
+                    <button class="border rounded-lg bg-[#FFCC00] hover:bg-[#FFAA1D] hover:p-2 hover:outline">
+                        <a href="resume_.pdf" download class="p-2">
+                            Resume Download
+                        </a>
+                    </button>
+                </div>
+                <div class="col-span-4 flex justify-center h-36">
+                    <button class="group relative overflow-visible">
+                        <a 
+                            x-data 
+                            @click="document.querySelector('#third-section').scrollIntoView({ behavior: 'smooth' })" 
+                            class="p-2 font-actionj flex items-center justify-center relative z-10">
+                            <!-- Arrow image -->
+                            <img 
+                                src="img/arrow-down.svg" 
+                                alt="Arrow Down" 
+                                class="w-10 h-10 rounded-full bg-black transition-opacity duration-300 group-hover:opacity-0">
+                            <!-- Hover text -->
+                            <span 
+                                class="hidden group-hover:inline-block font-black text-xl rounded-xl p-3">
+                                Go Ahead!
+                            </span>
+                        </a>
+                        <!-- Background image appears only on hover -->
+                        <div 
+                            class="absolute inset-0 bg-cover bg-center scale-0 group-hover:scale-150 transition-transform duration-300 z-0" 
+                            style="background-image: url('img/boom-box.png'); z-index: 0; pointer-events: none; object-fit: contain;">
+                        </div>
+                    </button>                                          
+                </div>
+            </div>                             
         </div>
+    </div>
+    <div id="third-section" class="h-screen bg-white">
+
     </div>
 </body>
 </html>
