--- a/index.html
+++ b/index.html
@@ -133,8 +133,34 @@
             </div>                             
         </div>
     </div>
-    <div id="third-section" class="h-screen bg-white">
-
+    <div id="third-section" class="h-screen bg-white flex items-center justify-center">
+        <div class="w-[70%] max-w-[800px] h-[400px] flex justify-center items-stretch gap-5 transition-all duration-[400ms] group">
+            <div
+                class=" bg-black card flex-1 h-full cursor-pointer transition-all duration-[400ms] odd:-translate-y-5 even:translate-y-5 grayscale hover:grayscale-0 hover:grayscale-0 hover:flex-[3]"
+            >
+                <img src="img/bg_55.png" class="w-full h-full object-cover" />
+            </div>
+            <div
+                class="card flex-1 h-full cursor-pointer transition-all duration-[400ms] odd:-translate-y-5 even:translate-y-5 grayscale hover:grayscale-0 hover:grayscale-0 hover:flex-[3]"
+            >
+                <img src="2.jpg" class="w-full h-full object-cover" />
+            </div>
+            <div
+                class="card flex-1 h-full cursor-pointer transition-all duration-[400ms] odd:-translate-y-5 even:translate-y-5 grayscale hover:grayscale-0 hover:grayscale-0 hover:flex-[3]"
+            >
+                <img src="img/toga.png" class="w-full h-full object-cover" />
+            </div>
+            <div
+                class="card flex-1 h-full cursor-pointer transition-all duration-[400ms] odd:-translate-y-5 even:translate-y-5 grayscale hover:grayscale-0 hover:grayscale-0 hover:flex-[3]"
+            >
+                <img src="img/laravel.jpg" class="w-full h-full object-cover" />
+            </div>
+            <div
+                class="card flex-1 h-full cursor-pointer transition-all duration-[400ms] odd:-translate-y-5 even:translate-y-5 grayscale hover:grayscale-0 hover:grayscale-0 hover:flex-[3]"
+            >
+                <img src="img/office.jpg" class="w-full h-full object-cover" />
+            </div>
+        </div>
     </div>
 </body>
 </html>
