--- a/index.html
+++ b/index.html
@@ -134,29 +134,29 @@
         </div>
     </div>
     <div id="third-section" class="h-screen bg-white flex items-center justify-center">
-        <div class="w-[70%] max-w-[800px] h-[400px] flex justify-center items-stretch gap-5 transition-all duration-[400ms] group">
+        <div class="w-[70%] bg-[#FFCC00] max-w-[8000vh] h-[500px] px-5 flex justify-center items-stretch gap-5 transition-all duration-[400ms] group">
             <div
-                class=" bg-black card flex-1 h-full cursor-pointer transition-all duration-[400ms] odd:-translate-y-5 even:translate-y-5 grayscale hover:grayscale-0 hover:grayscale-0 hover:flex-[3]"
+                class=" bg-black border-4 border-white card flex-1 h-full cursor-pointer transition-all duration-[400ms] odd:-translate-y-5 even:translate-y-5 grayscale hover:grayscale-0 hover:grayscale-0 hover:flex-[3]"
             >
                 <img src="img/bg_55.png" class="w-full h-full object-cover" />
             </div>
             <div
-                class="card flex-1 h-full cursor-pointer transition-all duration-[400ms] odd:-translate-y-5 even:translate-y-5 grayscale hover:grayscale-0 hover:grayscale-0 hover:flex-[3]"
+                class=" border-4 border-white card flex-1 h-full cursor-pointer transition-all duration-[400ms] odd:-translate-y-5 even:translate-y-5 grayscale hover:grayscale-0 hover:grayscale-0 hover:flex-[3]"
             >
-                <img src="2.jpg" class="w-full h-full object-cover" />
+                <img src="img/laravel.png" class="w-full h-full object-cover" />
             </div>
             <div
-                class="card flex-1 h-full cursor-pointer transition-all duration-[400ms] odd:-translate-y-5 even:translate-y-5 grayscale hover:grayscale-0 hover:grayscale-0 hover:flex-[3]"
+                class="border-4 border-white card flex-1 h-full cursor-pointer transition-all duration-[400ms] odd:-translate-y-5 even:translate-y-5 grayscale hover:grayscale-0 hover:grayscale-0 hover:flex-[3]"
             >
                 <img src="img/toga.png" class="w-full h-full object-cover" />
             </div>
             <div
-                class="card flex-1 h-full cursor-pointer transition-all duration-[400ms] odd:-translate-y-5 even:translate-y-5 grayscale hover:grayscale-0 hover:grayscale-0 hover:flex-[3]"
+                class="border-4 border-white card flex-1 h-full cursor-pointer transition-all duration-[400ms] odd:-translate-y-5 even:translate-y-5 grayscale hover:grayscale-0 hover:grayscale-0 hover:flex-[3]"
             >
-                <img src="img/laravel.jpg" class="w-full h-full object-cover" />
+                <img src="img/backend.png" class=" bg-blue-500 w-full h-full object-cover" />
             </div>
             <div
-                class="card flex-1 h-full cursor-pointer transition-all duration-[400ms] odd:-translate-y-5 even:translate-y-5 grayscale hover:grayscale-0 hover:grayscale-0 hover:flex-[3]"
+                class="border-4 border-white card flex-1 h-full cursor-pointer transition-all duration-[400ms] odd:-translate-y-5 even:translate-y-5 grayscale hover:grayscale-0 hover:grayscale-0 hover:flex-[3]"
             >
                 <img src="img/office.jpg" class="w-full h-full object-cover" />
             </div>
