--- a/index.html
+++ b/index.html
@@ -116,16 +116,16 @@
                             <img 
                                 src="img/arrow-down.svg" 
                                 alt="Arrow Down" 
-                                class="w-10 h-10 rounded-full bg-black transition-opacity duration-300 group-hover:opacity-0">
+                                class="w-10 h-10 rounded-full bg-black transition-opacity duration-300 hover:opacity-0">
                             <!-- Hover text -->
                             <span 
-                                class="hidden group-hover:inline-block font-black text-xl rounded-xl p-3">
+                                class="hidden hover:inline-block font-black text-xl rounded-xl p-3">
                                 Go Ahead!
                             </span>
                         </a>
                         <!-- Background image appears only on hover -->
                         <div 
-                            class="absolute inset-0 bg-cover bg-center scale-0 group-hover:scale-150 transition-transform duration-300 z-0" 
+                            class="absolute inset-0 bg-cover bg-center scale-0 hover:scale-150 transition-transform duration-300 z-0" 
                             style="background-image: url('img/boom-box.png'); z-index: 0; pointer-events: none; object-fit: contain;">
                         </div>
                     </button>                                          
@@ -135,11 +135,15 @@
     </div>
     <div id="third-section" class="h-screen bg-white flex items-center justify-center">
         <div class="w-[70%] bg-[#FFCC00] max-w-[8000vh] h-[500px] px-5 flex justify-center items-stretch gap-5 transition-all duration-[400ms] group">
-            <div
-                class=" bg-black border-4 border-white card flex-1 h-full cursor-pointer transition-all duration-[400ms] odd:-translate-y-5 even:translate-y-5 grayscale hover:grayscale-0 hover:grayscale-0 hover:flex-[3]"
-            >
+            <div class="relative group bg-black border-4 border-white card flex-1 h-full cursor-pointer transition-all duration-400 odd:-translate-y-5 even:translate-y-5 grayscale hover:grayscale-0 hover:flex-[3]">
                 <img src="img/bg_55.png" class="w-full h-full object-cover" />
+                <div class="absolute inset-0 flex items-center justify-center bg-black/50 opacity-0 transition-opacity hover:duration-700 hover:opacity-100">
+                    <p class="text-white text-center px-4">
+                        My interest in the IT field began in high school when I took ICT as my TLE subject in 9th grade. That’s where I learned my first IT skills, such as computer troubleshooting, hardware basics, and gained insights into various areas of IT. When I went to college, I chose to study Computer Science to further expand my knowledge in software development and programming. There, I learned different programming languages like Java and Python, as well as basic HTML, CSS, and some database querying. During my OJT, my journey into web development began. I was introduced to Agile-Scrum development, which involved fast-paced work with weekly reports and deliverables. I also learned Laravel development using the TALL stack, worked with version control, and experienced collaborative development using GitHub. Additionally, I gained skills in database management, migrations, and setting up new projects.
+                    </p>
+                </div>
             </div>
+
             <div
                 class=" border-4 border-white card flex-1 h-full cursor-pointer transition-all duration-[400ms] odd:-translate-y-5 even:translate-y-5 grayscale hover:grayscale-0 hover:grayscale-0 hover:flex-[3]"
             >
