--- a/index.html
+++ b/index.html
@@ -148,6 +148,11 @@
                 class=" border-4 border-white card flex-1 h-full cursor-pointer transition-all duration-[400ms] odd:-translate-y-5 even:translate-y-5 grayscale hover:grayscale-0 hover:grayscale-0 hover:flex-[3]"
             >
                 <img src="img/laravel.png" class="w-full h-full object-cover" />
+                <div class="absolute inset-0 flex items-center justify-center bg-black/50 opacity-0 transition-opacity hover:duration-700 hover:opacity-100">
+                    <p class="text-white text-center px-4">
+                        I have extensive experience and expertise in developing websites using Laravel with the TALL stack approach. I am highly proficient in the Laravel framework and Livewire, skilled in designing with Tailwind CSS, and adept at implementing dynamic functionality using Alpine.js.
+                    </p>
+                </div>
             </div>
             <div
                 class="border-4 border-white card flex-1 h-full cursor-pointer transition-all duration-[400ms] odd:-translate-y-5 even:translate-y-5 grayscale hover:grayscale-0 hover:grayscale-0 hover:flex-[3]"
