--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <script src="https://cdn.jsdelivr.net/npm/apexcharts"></script>
     <title>JDR Portfolio</title>
 </head>
-<body class="font-inter bg-white h-screen">
+<body class="font-inter bg-slate-800 h-screen">
     <!-- Section 1 -->
     <div class="h-screen flex items-center justify-center">
 
@@ -133,7 +133,7 @@
             </div>                             
         </div>
     </div>
-    <div id="third-section" class="h-screen bg-white flex items-center justify-center">
+    <div id="third-section" class="h-screen bg-slate-800 flex items-center justify-center">
         <div class="w-[70%] bg-[#FFCC00] max-w-[8000vh] h-[500px] px-5 flex justify-center items-stretch gap-5 transition-all duration-[400ms] group">
             <div class="relative group bg-black border-4 border-white card flex-1 h-full cursor-pointer transition-all duration-400 odd:-translate-y-5 even:translate-y-5 grayscale hover:grayscale-0 hover:flex-[3]">
                 <img src="img/bg_55.png" class="w-full h-full object-cover" />
@@ -158,6 +158,11 @@
                 class="border-4 border-white card flex-1 h-full cursor-pointer transition-all duration-[400ms] odd:-translate-y-5 even:translate-y-5 grayscale hover:grayscale-0 hover:grayscale-0 hover:flex-[3]"
             >
                 <img src="img/toga.png" class="w-full h-full object-cover" />
+                <div class="absolute inset-0 flex items-center justify-center bg-black/50 opacity-0 transition-opacity hover:duration-700 hover:opacity-100">
+                    <p class="text-white text-center px-4">
+                        I graduated with a Bachelor of Science in Computer Science in 2024, focusing on the development field. Since then, I have been continuously honing my skills through hands-on experience, practical projects, and ongoing learning. My passion for technology drives me to stay updated with the latest advancements, ensuring that I can develop efficient, scalable, and innovative solutions. Through my journey, I have gained expertise in web development, database management, and software engineering, allowing me to contribute effectively to various projects and challenges in the tech industry.
+                    </p>
+                </div>
             </div>
             <div
                 class="border-4 border-white card flex-1 h-full cursor-pointer transition-all duration-[400ms] odd:-translate-y-5 even:translate-y-5 grayscale hover:grayscale-0 hover:grayscale-0 hover:flex-[3]"
