--- a/index.html
+++ b/index.html
@@ -14,6 +14,14 @@
 <body class="font-inter bg-slate-800 h-screen">
     <!-- Section 1 -->
     <div class="h-screen flex items-center justify-center">
+        <ul class="box-area">
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+        </ul>
 
         <a @click="document.querySelector('#next-section').scrollIntoView({ behavior: 'smooth' })" class="button font-doergon text-xl hover:font-actionj hover:text-2xl hover:font-bold" x-data>
             <div class="button__content">
