--- a/index.html
+++ b/index.html
@@ -23,23 +23,8 @@
             <li></li>
         </ul>
 
-        <a @click="document.querySelector('#next-section').scrollIntoView({ behavior: 'smooth' })" class="button font-doergon text-xl hover:font-actionj hover:text-2xl hover:font-bold" x-data>
-            <div class="button__content">
-               <span>Let's Go!</span>
-              
-
-               <div class="button__reflection-1"></div>
-               <div class="button__reflection-2"></div>
-            </div>
-
-            <img src="img/star.png" alt="" class="button__star-1">
-            <img src="img/star.png" alt="" class="button__star-2">
-            <img src="img/circle.png" alt="" class="button__circle-1">
-            <img src="img/circle.png" alt="" class="button__circle-2">
-            <img src="img/diamond.png" alt="" class="button__diamond">
-            <img src="img/triangle.png" alt="" class="button__triangle">
-            
-            <div class="button__shadow"></div>
+        <a @click="document.querySelector('#next-section').scrollIntoView({ behavior: 'smooth' })" class="font-doergon font-black" x-data>
+            <button style="--clr:#FFCC00" class="button"><span>START</span><i></i></button>
          </a>
     </div>
 
