--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
                 <img src="img/laravel.png" class="w-full h-full object-cover" />
                 <div class="absolute inset-0 flex items-center justify-center bg-black/50 opacity-0 transition-opacity hover:duration-700 hover:opacity-100">
                     <p class="text-white text-center px-4">
-                        I have extensive experience and expertise in developing websites using Laravel with the TALL stack approach. I am highly proficient in the Laravel framework and Livewire, skilled in designing with Tailwind CSS, and adept at implementing dynamic functionality using Alpine.js.
+                        I have strong experience in web development using Laravel, including the TALL stack and the Inertia Vue approach. While my focus is on backend development, I am also proficient in Livewire, Tailwind CSS, and Alpine.js for dynamic functionality and UI design.
                     </p>
                 </div>
             </div>
@@ -159,11 +159,21 @@
                 class="border-4 border-white card flex-1 h-full cursor-pointer transition-all duration-[400ms] odd:-translate-y-5 even:translate-y-5 grayscale hover:grayscale-0 hover:grayscale-0 hover:flex-[3]"
             >
                 <img src="img/backend.png" class=" bg-blue-500 w-full h-full object-cover" />
+                <div class="absolute inset-0 flex items-center justify-center bg-black/50 opacity-0 transition-opacity hover:duration-700 hover:opacity-100">
+                    <p class="text-white text-center px-4">
+                        I specialize in backend development, with expertise in designing and managing databases using SQL Server, MySQL, and SQLite. I have experience in data analytics, creating ERDs and process flows to optimize system architecture. Additionally, I can take on QA tasks when needed, ensuring application functionality through testing and debugging.
+                    </p>
+                </div>
             </div>
             <div
                 class="border-4 border-white card flex-1 h-full cursor-pointer transition-all duration-[400ms] odd:-translate-y-5 even:translate-y-5 grayscale hover:grayscale-0 hover:grayscale-0 hover:flex-[3]"
             >
                 <img src="img/office.jpg" class="w-full h-full object-cover" />
+                <div class="absolute inset-0 flex items-center justify-center bg-black/50 opacity-0 transition-opacity hover:duration-700 hover:opacity-100">
+                    <p class="text-white text-center px-4">
+                        I work as part of a team in a corporate company, developing systems for different departments and gradually integrating them into a unified ERP. Our goal is to streamline operations and enhance efficiency through advanced technology.
+                    </p>
+                </div>
             </div>
         </div>
     </div>
