--- a/index.html
+++ b/index.html
@@ -13,16 +13,15 @@
 </head>
 <body class="font-inter bg-slate-800 h-screen">
     <!-- Section 1 -->
+    <ul class="box-area">
+        <li></li>
+        <li></li>
+        <li></li>
+        <li></li>
+        <li></li>
+        <li></li>
+    </ul>
     <div class="h-screen flex items-center justify-center">
-        <ul class="box-area">
-            <li></li>
-            <li></li>
-            <li></li>
-            <li></li>
-            <li></li>
-            <li></li>
-        </ul>
-
         <a @click="document.querySelector('#next-section').scrollIntoView({ behavior: 'smooth' })" class="font-doergon font-black" x-data>
             <button style="--clr:#FFCC00" class="button"><span>START</span><i></i></button>
          </a>
@@ -124,19 +123,28 @@
             </div>                             
         </div>
     </div>
-    <div id="third-section" class="h-screen bg-slate-800 flex items-center justify-center">
+    
+    <div id="third-section" class=" box-area-bottom h-screen bg-slate-800 flex items-center justify-center">
+        <ul class="absolute top-0 left-0 w-full z-0">
+            <li class="box-area-bottom"></li>
+            <li class="box-area-bottom"></li>
+            <li class="box-area-bottom"></li>
+            <li class="box-area-bottom"></li>
+            <li class="box-area-bottom"></li>
+            <li class="box-area-bottom"></li>
+        </ul>
         <div class="w-[70%] bg-[#FFCC00] max-w-[8000vh] h-[500px] px-5 flex justify-center items-stretch gap-5 transition-all duration-[400ms] group">
-            <div class="relative group bg-black border-4 border-white card flex-1 h-full cursor-pointer transition-all duration-400 odd:-translate-y-5 even:translate-y-5 grayscale hover:grayscale-0 hover:flex-[3]">
+            <div class="relative group bg-black border-4 border-white card flex-1 h-full cursor-pointer transition-all duration-400 odd:-translate-y-5 even:translate-y-5 hover:grayscale-0 hover:flex-[3]">
                 <img src="img/bg_55.png" class="w-full h-full object-cover" />
                 <div class="absolute inset-0 flex items-center justify-center bg-black/50 opacity-0 transition-opacity hover:duration-700 hover:opacity-100">
-                    <p class="text-white text-center px-4">
+                    <p class="text-white text-center px-4 max-w-[80%] max-h-[80%] overflow-auto hide-scrollbar">
                         My interest in the IT field began in high school when I took ICT as my TLE subject in 9th grade. That’s where I learned my first IT skills, such as computer troubleshooting, hardware basics, and gained insights into various areas of IT. When I went to college, I chose to study Computer Science to further expand my knowledge in software development and programming. There, I learned different programming languages like Java and Python, as well as basic HTML, CSS, and some database querying. During my OJT, my journey into web development began. I was introduced to Agile-Scrum development, which involved fast-paced work with weekly reports and deliverables. I also learned Laravel development using the TALL stack, worked with version control, and experienced collaborative development using GitHub. Additionally, I gained skills in database management, migrations, and setting up new projects.
                     </p>
                 </div>
-            </div>
+            </div>            
 
             <div
-                class=" border-4 border-white card flex-1 h-full cursor-pointer transition-all duration-[400ms] odd:-translate-y-5 even:translate-y-5 grayscale hover:grayscale-0 hover:grayscale-0 hover:flex-[3]"
+                class=" border-4 border-white card flex-1 h-full cursor-pointer transition-all duration-[400ms] odd:-translate-y-5 even:translate-y-5 hover:grayscale-0 hover:grayscale-0 hover:flex-[3]"
             >
                 <img src="img/laravel.png" class="w-full h-full object-cover" />
                 <div class="absolute inset-0 flex items-center justify-center bg-black/50 opacity-0 transition-opacity hover:duration-700 hover:opacity-100">
@@ -146,17 +154,17 @@
                 </div>
             </div>
             <div
-                class="border-4 border-white card flex-1 h-full cursor-pointer transition-all duration-[400ms] odd:-translate-y-5 even:translate-y-5 grayscale hover:grayscale-0 hover:grayscale-0 hover:flex-[3]"
+                class="border-4 border-white card flex-1 h-full cursor-pointer transition-all duration-[400ms] odd:-translate-y-5 even:translate-y-5 hover:grayscale-0 hover:grayscale-0 hover:flex-[3]"
             >
                 <img src="img/toga.png" class="w-full h-full object-cover" />
                 <div class="absolute inset-0 flex items-center justify-center bg-black/50 opacity-0 transition-opacity hover:duration-700 hover:opacity-100">
-                    <p class="text-white text-center px-4">
+                    <p class="text-white text-center px-4 max-w-[80%] max-h-[80%] overflow-auto hide-scrollbar">
                         I graduated with a Bachelor of Science in Computer Science in 2024, focusing on the development field. Since then, I have been continuously honing my skills through hands-on experience, practical projects, and ongoing learning. My passion for technology drives me to stay updated with the latest advancements, ensuring that I can develop efficient, scalable, and innovative solutions. Through my journey, I have gained expertise in web development, database management, and software engineering, allowing me to contribute effectively to various projects and challenges in the tech industry.
                     </p>
                 </div>
             </div>
             <div
-                class="border-4 border-white card flex-1 h-full cursor-pointer transition-all duration-[400ms] odd:-translate-y-5 even:translate-y-5 grayscale hover:grayscale-0 hover:grayscale-0 hover:flex-[3]"
+                class="border-4 border-white card flex-1 h-full cursor-pointer transition-all duration-[400ms] odd:-translate-y-5 even:translate-y-5 hover:grayscale-0 hover:grayscale-0 hover:flex-[3]"
             >
                 <img src="img/backend.png" class=" bg-blue-500 w-full h-full object-cover" />
                 <div class="absolute inset-0 flex items-center justify-center bg-black/50 opacity-0 transition-opacity hover:duration-700 hover:opacity-100">
@@ -166,7 +174,7 @@
                 </div>
             </div>
             <div
-                class="border-4 border-white card flex-1 h-full cursor-pointer transition-all duration-[400ms] odd:-translate-y-5 even:translate-y-5 grayscale hover:grayscale-0 hover:grayscale-0 hover:flex-[3]"
+                class="border-4 border-white card flex-1 h-full cursor-pointer transition-all duration-[400ms] odd:-translate-y-5 even:translate-y-5 hover:grayscale-0 hover:grayscale-0 hover:flex-[3]"
             >
                 <img src="img/office.jpg" class="w-full h-full object-cover" />
                 <div class="absolute inset-0 flex items-center justify-center bg-black/50 opacity-0 transition-opacity hover:duration-700 hover:opacity-100">
